--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -67,18 +67,18 @@ jobs:
       - name: Run vcpkg
         uses: lukka/run-vcpkg@v7
         with:
-          vcpkgArguments: boost-asio boost-filesystem boost-iostreams boost-lockfree boost-system boost-variant cryptopp libmariadb luajit vcpkg-tool-ninja vcpkg-tool-meson
+          vcpkgArguments: boost-asio boost-filesystem boost-iostreams boost-lockfree boost-system boost-variant cryptopp libmariadb luajit python3 vcpkg-tool-ninja vcpkg-tool-meson
           vcpkgDirectory: ${{ runner.workspace }}/vcpkg/
           vcpkgTriplet: ${{ matrix.triplet }}
           appendedCacheKey: ${{ matrix.name }}${{ matrix.buildtype }}${{ matrix.luajit }}
           vcpkgGitCommitId: a7b6122f6b6504d16d96117336a0562693579933
 
       - name: Build with meson
-        run: meson.py setup -D buildtype=${{ matrix.buildtype }} -D luajit=${{ matrix.luajit }} ${{ runner.workspace }}/build && ninja -C ${{ runner.workspace }}/build
+        run: python3.10 ${{ runner.workspace }}/vcpkg/installed/${{ matrix.triplet }}/tools/meson/meson.py setup -D buildtype=${{ matrix.buildtype }} -D luajit=${{ matrix.luajit }} ${{ runner.workspace }}/build && ninja -C ${{ runner.workspace }}/build
         env:
           CC: ${{ matrix.cc }}
           CXX: ${{ matrix.cxx }}
-          PATH: ${{ runner.workspace }}/vcpkg/installed/${{ matrix.triplet }}/tools/meson/:${{ runner.workspace }}/vcpkg/installed/${{ matrix.triplet }}/tools/ninja/:$PATH
+          PATH: ${{ runner.workspace }}/vcpkg/installed/${{ matrix.triplet }}/tools/ninja/:${{ runner.workspace }}/vcpkg/installed/${{ matrix.triplet }}/tools/python3/:$PATH
           BOOST_ROOT: ${{ runner.workspace }}/vcpkg/installed/${{ matrix.triplet }}
           PKG_CONFIG_PATH: ${{ runner.workspace }}/vcpkg/installed/${{ matrix.triplet }}/lib/pkgconfig
 
