--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -18,14 +18,14 @@ on:
       - CMakeLists.txt
 
 jobs:
-  unix:
+  build-vcpkg:
     name: ${{ matrix.os }}-${{ matrix.cxx }}-${{ matrix.buildtype }}-luajit=${{ matrix.luajit }}
     runs-on: ${{ matrix.os }}-latest
     strategy:
       fail-fast: false
       max-parallel: 10
       matrix:
-        name: [ubuntu-gcc, ubuntu-clang, macos-clang]
+        name: [ubuntu-gcc, ubuntu-clang, macos-clang, windows-msvc]
         buildtype: [Debug, Release]
         luajit: [on, off]
         include:
@@ -33,26 +33,18 @@ jobs:
             os: ubuntu
             cxx: g++
             cc: gcc
-            triplet: x64-linux
-            packages: >
-              boost-asio boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
-              lua libmariadb pugixml cryptopp fmt
           - name: ubuntu-clang
             os: ubuntu
             cxx: clang++
             cc: clang
-            triplet: x64-linux
-            packages: >
-              boost-asio boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
-              lua libmariadb pugixml cryptopp fmt
           - name: macos-clang
             os: macos
             cxx: clang++
             cc: clang
-            triplet: x64-osx
-            packages: >
-              boost-asio boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
-              lua libmariadb pugixml cryptopp fmt
+          - name: windows-msvc
+            os: windows
+            cxx: cl.exe
+            cc: cl.exe
         exclude:
           - name: ubuntu-clang
             buildtype: Release
@@ -60,6 +52,8 @@ jobs:
             luajit: off
           - name: macos-clang
             luajit: off
+          - name: windows-msvc
+            luajit: off
 
     steps:
       - uses: actions/checkout@v3
@@ -70,48 +64,35 @@ jobs:
         # Using 'latest' branch, the latest CMake is installed.
         uses: lukka/get-cmake@latest
 
-      - name: Ubuntu - install luajit, remove libmysqlclient-dev
-        run: |
-          sudo apt-get install libluajit-5.1-dev
-          sudo apt-get remove -y libmysqlclient-dev
-        if: contains( matrix.os, 'ubuntu')
-
-      - name: MacOS - install luajit pkgconfig
-        run: brew install luajit pkgconfig
-        if: contains( matrix.os, 'macos')
-
       - name: Set Environment vars
         run: |
           echo "CXX=${{ matrix.cxx }}" >> $GITHUB_ENV
           echo "CC=${{ matrix.cc }}" >> $GITHUB_ENV
 
       - name: Run vcpkg
-        uses: lukka/run-vcpkg@v7
+        uses: lukka/run-vcpkg@v11
         with:
-          vcpkgArguments: ${{ matrix.packages }}
-          vcpkgDirectory: ${{ runner.workspace }}/vcpkg/
-          vcpkgTriplet: ${{ matrix.triplet }}
-          appendedCacheKey: ${{ matrix.name }}${{ matrix.buildtype }}${{ matrix.luajit }}
-          vcpkgGitCommitId: 5568f110b509a9fd90711978a7cb76bae75bb092
+          vcpkgGitCommitId: 5b1214315250939257ef5d62ecdcbca18cf4fb1c
 
       - name: Build with CMake
-        uses: lukka/run-cmake@v3
-        with:
-          useVcpkgToolchainFile: true
-          buildDirectory: ${{ runner.workspace }}/build
-          cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
-          cmakeAppendedArgs: '-G Ninja -DCMAKE_BUILD_TYPE="${{ matrix.buildtype }}" -DUSE_LUAJIT="${{ matrix.luajit }}"'
-
-      - name: dir
-        run: find $RUNNER_WORKSPACE
-        shell: bash
+        uses: lukka/run-cmake@v10
 
       - name: Upload artifact binary
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
+        if: ${{ !startsWith(matrix.os, 'windows') }}
         with:
           name: tfs-${{ matrix.name }}-${{ matrix.buildtype }}-luajit=${{ matrix.luajit }}-${{ github.sha }}
           path: ${{ runner.workspace }}/build/tfs
 
+      - name: Upload artifact binary (exe)
+        uses: actions/upload-artifact@v3
+        if: ${{ startsWith(matrix.os, 'windows') }}
+        with:
+          name: tfs-${{ matrix.name }}-${{ matrix.buildtype }}-luajit=${{ matrix.luajit }}-${{ github.sha }}
+          path: |
+            ${{ runner.workspace }}/build/tfs.exe
+            ${{ runner.workspace }}/build/*.dll
+
       - name: Prepare datapack contents
         run: find . -maxdepth 1 ! -name data ! -name config.lua.dist ! -name key.pem ! -name LICENSE ! -name README.md ! -name schema.sql -exec rm -r {} \;
         shell: bash
@@ -120,83 +101,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: tfs-${{ matrix.name }}-${{ matrix.buildtype }}-luajit=${{ matrix.luajit }}-${{ github.sha }}
-          path: ${{ github.workspace }}
-
-  windows:
-    name: ${{ matrix.os }}-${{ matrix.cxx }}-${{ matrix.buildtype }}-luajit=on
-    runs-on: ${{ matrix.os }}-latest
-    strategy:
-      fail-fast: false
-      max-parallel: 8
-      matrix:
-        name: [windows-msvc]
-        buildtype: [Debug, Release]
-        include:
-          - name: windows-msvc
-            os: windows
-            cxx: cl.exe
-            cc: cl.exe
-            triplet: x64-windows
-            packages: >
-              boost-asio boost-iostreams boost-system boost-filesystem boost-variant boost-lockfree
-              lua luajit libmariadb pugixml cryptopp fmt
-
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Get latest CMake
-        # Using 'latest' branch, the latest CMake is installed.
-        uses: lukka/get-cmake@latest
-
-      - name: Windows - remove C:/mysql*
-        run: rm -r -fo C:/mysql*
-
-      - name: Set Environment vars
-        run: |
-          echo "CXX=${{ matrix.cxx }}" >> $GITHUB_ENV
-          echo "CC=${{ matrix.cc }}" >> $GITHUB_ENV
-
-      - name: Run vcpkg
-        uses: lukka/run-vcpkg@v7
-        with:
-          vcpkgArguments: ${{ matrix.packages }}
-          vcpkgDirectory: ${{ runner.workspace }}/vcpkg/
-          vcpkgTriplet: ${{ matrix.triplet }}
-          appendedCacheKey: ${{ matrix.name }}${{ matrix.buildtype }}${{ matrix.luajit }}
-          vcpkgGitCommitId: 5568f110b509a9fd90711978a7cb76bae75bb092
-
-      - name: Build with CMake
-        uses: lukka/run-cmake@v3
-        with:
-          useVcpkgToolchainFile: true
-          buildDirectory: ${{ runner.workspace }}/build
-          cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
-          cmakeAppendedArgs: '-G Ninja -DCMAKE_BUILD_TYPE="${{ matrix.buildtype }}" -DUSE_LUAJIT="on"'
-
-      - name: dir
-        run: find $RUNNER_WORKSPACE
-        shell: bash
-
-      - name: Upload artifact binary (exe)
-        uses: actions/upload-artifact@v2
-        with:
-          name: tfs-${{ matrix.name }}-${{ matrix.buildtype }}-luajit=on-${{ github.sha }}
-          path: ${{ runner.workspace }}/build/tfs.exe
-
-      - name: Upload artifact binary (dlls)
-        uses: actions/upload-artifact@v2
-        with:
-          name: tfs-${{ matrix.name }}-${{ matrix.buildtype }}-luajit=on-${{ github.sha }}
-          path: ${{ runner.workspace }}/build/*.dll
-
-      - name: Prepare datapack contents
-        run: find . -maxdepth 1 ! -name data ! -name config.lua.dist ! -name key.pem ! -name LICENSE ! -name README.md ! -name schema.sql -exec rm -r {} \;
-        shell: bash
-
-      - name: Upload datapack contents
-        uses: actions/upload-artifact@v2
-        with:
-          name: tfs-${{ matrix.name }}-${{ matrix.buildtype }}-luajit=on-${{ github.sha }}
           path: ${{ github.workspace }}
