Add files to trigger paths

--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -10,12 +10,16 @@ on:
       - cmake/**
       - src/**
       - CMakeLists.txt
+      - CMakePresets.json
+      - vcpkg.json
 
   pull_request:
     paths:
       - cmake/**
       - src/**
       - CMakeLists.txt
+      - CMakePresets.json
+      - vcpkg.json
 
 jobs:
   build-vcpkg:
