add new config to config.lua.dist

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -145,6 +145,9 @@ rateLoot = 2
 rateMagic = 3
 rateSpawn = 1
 
+-- Breakable Mana Shield
+useBreakableManaShield = true
+
 -- Monster Despawn Config
 -- despawnRange is the amount of floors a monster can be from its spawn position
 -- despawnRadius is how many tiles away it can be from its spawn position
