Fix pugixml detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,9 +50,11 @@ endif ()
 find_package(Threads REQUIRED)
 
 find_package(pugixml CONFIG)
-if (NOT pugixml_FOUND)
+if (pugixml_FOUND)
+    set(PUGIXML_LIBRARIES "pugixml::static")
+else ()
     find_package(PugiXML REQUIRED)
-endif()
+endif ()
 
 # Selects LuaJIT if user defines or auto-detected
 if (DEFINED USE_LUAJIT AND NOT USE_LUAJIT)
