--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,13 +5,22 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-20.04
+
+    env:
+      CC: gcc
+      CXX: g++
+
     steps:
       - uses: actions/checkout@v3
+
+      - name: Get latest CMake
+        # Using 'latest' branch, the latest CMake is installed.
+        uses: lukka/get-cmake@latest
 
       - name: Install dependencies
         run: >
           sudo apt update -q &&
-          sudo apt install -yq git cmake build-essential libluajit-5.1-dev libmysqlclient-dev
+          sudo apt install -yq git build-essential libluajit-5.1-dev libmysqlclient-dev
           libboost-date-time-dev libboost-system-dev libboost-iostreams-dev libboost-filesystem-dev
           libboost-test-dev libpugixml-dev libcrypto++-dev libfmt-dev
 
