Remove unused dependency boost::date_time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ if (NOT FORCE_LUAJIT)
     find_package(Lua REQUIRED)
 endif ()
 
-find_package(Boost 1.66.0 REQUIRED COMPONENTS date_time system iostreams)
+find_package(Boost 1.66.0 REQUIRED COMPONENTS system iostreams)
 
 option(ENABLE_TESTING "Build unit tests" OFF)
 
