Standardize apt invocations

--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -31,9 +31,9 @@ jobs:
 
       - name: Install dependencies
         run: >
-          sudo apt update &&
-          sudo apt install build-essential libluajit-5.1-dev libmysqlclient-dev
-          libboost-date-time-dev libboost-system-dev libboost-iostreams-dev libboost-filesystem-dev
+          sudo apt update -q &&
+          sudo apt install -yq build-essential libluajit-5.1-dev libmysqlclient-dev
+          libboost-system-dev libboost-iostreams-dev
           libpugixml-dev libcrypto++-dev libfmt-dev
 
       - name: Build with cmake
