--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -18,8 +18,9 @@ jobs:
 
       - name: Install dependencies
         run: >
-          sudo apt-get install git cmake build-essential libluajit-5.1-dev libgmp3-dev libmysqlclient-dev
-          libboost-date-time-dev libboost-system-dev libboost-iostreams-dev libboost-filesystem-dev
+          sudo apt update -q &&
+          sudo apt install -yq build-essential libluajit-5.1-dev libmysqlclient-dev
+          libboost-system-dev libboost-iostreams-dev
           libpugixml-dev libcrypto++-dev libfmt-dev
 
       - name: Get latest CMake
