--- a/.github/workflows/xml-syntax.yml
+++ b/.github/workflows/xml-syntax.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install xmllint
-        run: sudo apt-get update && sudo apt-get install -y libxml2-utils
+        run: sudo apt update -q && sudo apt install -yq libxml2-utils
 
       - name: Test XML syntax
         run: find data/ -name '*.xml' -print0 | xargs -0 -n1 xmllint --noout
