Use CMake presets and vcpkg manifest in workflows (#4376)
* Use cmake presets and vcpkg manifest
* Add files to trigger paths
* Update workflows to use vcpkg manifest
* Fix vcpkg package finds
* Fix pugixml detection
* Rework cc/cxx setup
* Build and run test with run-cmake action
* Use get-cmake to install cmake on test workflow
* Use ubuntu-latest on all workflows
* Fix structured binding compile error
* Raise minimum CMake version and remove cotire
* Remove unused dependency boost::date_time
* Standardize apt invocations

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -173,15 +173,14 @@ set(tfs_MAIN ${CMAKE_CURRENT_LIST_DIR}/otserv.cpp PARENT_SCOPE)
 
 add_library(tfslib ${tfs_SRC})
 target_link_libraries(tfslib PRIVATE
-	Boost::date_time
-	Boost::system
 	Boost::iostreams
+	Boost::system
 	fmt::fmt
+	pugixml::pugixml
 	${CMAKE_THREAD_LIBS_INIT}
 	${Crypto++_LIBRARIES}
 	${LUA_LIBRARIES}
 	${MYSQL_CLIENT_LIBS}
-	${PUGIXML_LIBRARIES}
 	)
 
 add_custom_target(format COMMAND /usr/bin/clang-format -style=file -i ${tfs_HDR} ${tfs_SRC} ${tfs_MAIN})
