Build with Ninja to speed up compilation

--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -53,6 +53,7 @@ jobs:
           buildPreset: vcpkg
           buildPresetAdditionalArgs: "['--config ${{ matrix.buildtype }}', '--clean-first']"
           configurePreset: vcpkg
+          configurePresetAdditionalArgs: "['-G Ninja']"
 
       - name: Upload artifact binary
         uses: actions/upload-artifact@v3
